line up versions
git-svn-id: https://svn.apache.org/repos/asf/incubator/npanday/npanday-its/trunk@1225739 13f79535-47bb-0310-9956-ffa450edef68

--- a/src/test/resources/NPANDAY_480_AzureSupportOneWebRole/pom.xml
+++ b/src/test/resources/NPANDAY_480_AzureSupportOneWebRole/pom.xml
@@ -29,6 +29,7 @@
   </parent>
   <groupId>NPanday.ITs.NPANDAY_480_AzureSupportOneWebRole</groupId>
   <artifactId>NPANDAY_480_AzureSupportOneWebRole-parent</artifactId>
+  <version>1.0.0-SNAPSHOT</version>
   <packaging>pom</packaging>
   <name>NPANDAY_480_AzureSupportOneWebRole : NPANDAY_480_AzureSupportOneWebRole-parent</name>
 
