--- a/src/test/resources/NPANDAY_480_CloudServiceWithWorkerRole/pom.xml
+++ b/src/test/resources/NPANDAY_480_CloudServiceWithWorkerRole/pom.xml
@@ -29,6 +29,7 @@
   </parent>
   <groupId>NPanday.ITs.NPANDAY_480_CloudServiceWithWorkerRole</groupId>
   <artifactId>NPANDAY_480_CloudServiceWithWorkerRole-parent</artifactId>
+  <version>1.0.0-SNAPSHOT</version>
   <packaging>pom</packaging>
   <name>NPANDAY_480_CloudServiceWithWorkerRole : NPANDAY_480_CloudServiceWithWorkerRole-parent</name>
 
