bootstrap the Azure libs for the ITs for now, until they can be served from a repository. Users will need to do this by hand
git-svn-id: https://svn.apache.org/repos/asf/incubator/npanday/npanday-its/trunk@1225755 13f79535-47bb-0310-9956-ffa450edef68

--- a/src/test/resources/NPANDAY_480_CloudServiceWithMultipleRoles/HelloWorld_WorkerRole/pom.xml
+++ b/src/test/resources/NPANDAY_480_CloudServiceWithMultipleRoles/HelloWorld_WorkerRole/pom.xml
@@ -40,6 +40,16 @@
     <frameworkVersion>4.0</frameworkVersion>
   </properties>
 
+  <repositories>
+    <repository>
+      <id>azure-it-repo</id>
+      <url>file:${basedir}/../../AzureBootstrap/azure-repo</url>
+      <snapshots>
+        <enabled>false</enabled>
+      </snapshots>
+    </repository>
+  </repositories>
+
   <dependencies>
     <dependency>
       <groupId>Microsoft.WindowsAzure</groupId>
