--- a/src/test/resources/NPANDAY_480_CloudServiceWithWorkerRole/HelloWorld_WorkerRole/pom.xml
+++ b/src/test/resources/NPANDAY_480_CloudServiceWithWorkerRole/HelloWorld_WorkerRole/pom.xml
@@ -40,6 +40,16 @@
     <frameworkVersion>4.0</frameworkVersion>
   </properties>
 
+  <repositories>
+    <repository>
+      <id>azure-it-repo</id>
+      <url>file:${basedir}/../../AzureBootstrap/azure-repo</url>
+      <snapshots>
+        <enabled>false</enabled>
+      </snapshots>
+    </repository>
+  </repositories>
+
   <dependencies>
     <dependency>
       <groupId>Microsoft.WindowsAzure</groupId>
