[NPANDAY-493] Integration test adjustments for Xml Document Transform (XDT) support for web and application packaging
git-svn-id: https://svn.apache.org/repos/asf/incubator/npanday/npanday-its/trunk@1232181 13f79535-47bb-0310-9956-ffa450edef68

--- a/src/test/resources/NPANDAY_480_AzureSupportOneWebRole/HelloWorld_WebRole/pom.xml
+++ b/src/test/resources/NPANDAY_480_AzureSupportOneWebRole/HelloWorld_WebRole/pom.xml
@@ -55,7 +55,7 @@
           <execution>
             <goals>
               <goal>assemble-package-files</goal>
-              <goal>process-web-config</goal>
+              <goal>process-configs</goal>
             </goals>
           </execution>
         </executions>
