--- a/src/test/resources/NPANDAY_480_CloudServiceWithMultipleRoles/HelloWorld_WebRole/pom.xml
+++ b/src/test/resources/NPANDAY_480_CloudServiceWithMultipleRoles/HelloWorld_WebRole/pom.xml
@@ -55,7 +55,7 @@
           <execution>
             <goals>
               <goal>assemble-package-files</goal>
-              <goal>process-web-config</goal>
+              <goal>process-configs</goal>
             </goals>
           </execution>
         </executions>
