--- a/src/test/resources/NPANDAY_480_CloudServiceWithMultipleRoles/HelloWorld_WorkerRole/app.package.config
+++ b/src/test/resources/NPANDAY_480_CloudServiceWithMultipleRoles/HelloWorld_WorkerRole/app.package.config
@@ -1,13 +1,4 @@
-﻿<?xml version="1.0" encoding="utf-8" ?>
-<configuration>
-    <system.diagnostics>
-        <trace>
-            <listeners>
-                <add type="Microsoft.WindowsAzure.Diagnostics.DiagnosticMonitorTraceListener, Microsoft.WindowsAzure.Diagnostics, Version=1.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35"
-                    name="AzureDiagnostics">
-                    <filter type="" />
-                </add>
-            </listeners>
-        </trace>
-    </system.diagnostics>
+﻿<?xml version="1.0"?>
+
+<configuration xmlns:xdt="http://schemas.microsoft.com/XML-Document-Transform">
 </configuration>
