--- a/src/test/resources/NPANDAY_452_SilverlightAppTest/SilverlightApplication1.Web/pom.xml
+++ b/src/test/resources/NPANDAY_452_SilverlightAppTest/SilverlightApplication1.Web/pom.xml
@@ -9,7 +9,7 @@
   <modelVersion>4.0.0</modelVersion>
   <artifactId>SilverlightApplication1.Web</artifactId>
   <packaging>dotnet-library</packaging>
-  <name>SilverlightApplication1 : SilverlightApplication1.Web</name>
+  <name>NPanday.ITs.NPANDAY_452_SilverlightAppTest : SilverlightApplication1.Web</name>
   <build>
     <sourceDirectory>Properties</sourceDirectory>
     <plugins>
@@ -97,13 +97,13 @@
       <classifier>31bf3856ad364e35</classifier>
     </dependency>
     <dependency>
-      <groupId>SilverlightApplication1</groupId>
+      <groupId>NPanday.ITs.NPANDAY_452_SilverlightAppTest</groupId>
       <artifactId>SilverlightApplication1</artifactId>
       <version>1.0-SNAPSHOT</version>
       <type>silverlight-application</type>
     </dependency>
     <dependency>
-      <groupId>SilverlightApplication1</groupId>
+      <groupId>NPanday.ITs.NPANDAY_452_SilverlightAppTest</groupId>
       <artifactId>SilverlightApplication2</artifactId>
       <version>1.0-SNAPSHOT</version>
       <type>silverlight-application</type>
