[NPANDAY-535] ensure a ZIP is installed in the local repository
git-svn-id: https://svn.apache.org/repos/asf/incubator/npanday/npanday-its/trunk@1236137 13f79535-47bb-0310-9956-ffa450edef68

--- a/src/test/resources/NPandayIT0013WebAppInstallTest/pom.xml
+++ b/src/test/resources/NPandayIT0013WebAppInstallTest/pom.xml
@@ -30,6 +30,7 @@
   <artifactId>WebAppExample</artifactId>
   <packaging>asp</packaging>
   <name>NPanday.IT : WebAppExample</name>
+  <version>1.0-SNAPSHOT</version>
   <build>
     <sourceDirectory>.</sourceDirectory>
     <plugins>
