--- a/src/test/resources/BootstrapTest/pom.xml
+++ b/src/test/resources/BootstrapTest/pom.xml
@@ -177,4 +177,24 @@
       </properties>
     </profile>
   </profiles>
+  <!-- Required to build where it was built in a different local repository, but
+       still assumes you're going to use a repository manager to mirror it -->
+  <repositories>
+    <repository>
+      <id>npanday.snapshots</id>
+      <url>http://repo1.maven.org/maven2</url>
+      <snapshots>
+        <enabled>true</enabled>
+      </snapshots>
+    </repository>
+  </repositories>
+  <pluginRepositories>
+    <pluginRepository>
+      <id>npanday.snapshots</id>
+      <url>http://repo1.maven.org/maven2</url>
+      <snapshots>
+        <enabled>true</enabled>
+      </snapshots>
+    </pluginRepository>
+  </pluginRepositories>
 </project>
