--- a/pom.xml
+++ b/pom.xml
@@ -201,12 +201,12 @@
   <!-- TODO: set up a common parent with NPanday again to store these -->
   <distributionManagement>
     <repository>
-      <id>vmbuild.releases</id>
-      <url>http://vmbuild.apache.org/archiva/repository/npanday-releases/</url>
+      <id>archiva-repository.releases</id>
+      <url>https://archiva-repository.apache.org/archiva/repository/npanday-releases/</url>
     </repository>
     <snapshotRepository>
-      <id>vmbuild.snapshots</id>
-      <url>http://vmbuild.apache.org/archiva/repository/npanday-snapshots/</url>
+      <id>archiva-repository.snapshots</id>
+      <url>https://archiva-repository.apache.org/archiva/repository/snapshots/</url>
     </snapshotRepository>
   </distributionManagement>
   
@@ -217,7 +217,7 @@
       </releases>
       <id>npanday.snapshots</id>
       <name>NPanday Snapshot Repository</name>
-      <url>http://vmbuild.apache.org/archiva/repository/npanday-snapshots</url>
+      <url>https://archiva-repository.apache.org/archiva/repository/snapshots</url>
     </pluginRepository>
   </pluginRepositories>
   
@@ -245,7 +245,7 @@
       </releases>
       <id>npanday.snapshots</id>
       <name>NPanday Snapshot Repository</name>
-      <url>http://vmbuild.apache.org/archiva/repository/npanday-snapshots</url>
+      <url>https://archiva-repository.apache.org/archiva/repository/snapshots</url>
     </repository>
   </repositories>
 </project>
