[NPANDAY-571] add diagnostics as well
git-svn-id: https://svn.apache.org/repos/asf/incubator/npanday/npanday-its/trunk@1390791 13f79535-47bb-0310-9956-ffa450edef68

--- a/src/test/resources/Azure17Bootstrap/pom.xml
+++ b/src/test/resources/Azure17Bootstrap/pom.xml
@@ -42,6 +42,14 @@
       <systemPath>C:\Program Files\Microsoft SDKs\Windows Azure\.NET SDK\2012-06\ref\Microsoft.WindowsAzure.Configuration.dll</systemPath>
     </dependency>
     <dependency>
+      <groupId>Microsoft.WindowsAzure.Diagnostics</groupId>
+      <artifactId>Microsoft.WindowsAzure.Diagnostics</artifactId>
+      <version>1.7.0.0</version>
+      <type>dotnet-library</type>
+      <scope>system</scope>
+      <systemPath>C:\Program Files\Microsoft SDKs\Windows Azure\.NET SDK\2012-06\ref\Microsoft.WindowsAzure.Diagnostics.dll</systemPath>
+    </dependency>
+    <dependency>
       <groupId>Microsoft.WindowsAzure.StorageClient</groupId>
       <artifactId>Microsoft.WindowsAzure.StorageClient</artifactId>
       <version>1.7.0.0</version>
