--- a/src/test/resources/NPANDAY_452_SilverlightAppTest/SilverlightApplication1.Web/pom.xml
+++ b/src/test/resources/NPANDAY_452_SilverlightAppTest/SilverlightApplication1.Web/pom.xml
@@ -47,7 +47,7 @@
           <execution>
             <id>create-msdeploy-package</id>
             <goals>
-              <goal>create-package</goal>
+              <goal>create-iisApp-package</goal>
             </goals>
           </execution>
         </executions>
