--- a/src/test/resources/NPANDAY_254_WebappWithCultureResTest/pom.xml
+++ b/src/test/resources/NPANDAY_254_WebappWithCultureResTest/pom.xml
@@ -82,7 +82,7 @@
           <execution>
             <id>create-msdeploy-package</id>
             <goals>
-              <goal>create-package</goal>
+              <goal>create-iisApp-package</goal>
             </goals>
           </execution>
         </executions>
