add missing platform declaration
git-svn-id: https://svn.apache.org/repos/asf/incubator/npanday/npanday-its/trunk@1572444 13f79535-47bb-0310-9956-ffa450edef68

--- a/src/test/resources/NPANDAY_328_VS2010WpfProjectSupportTest/pom.xml
+++ b/src/test/resources/NPANDAY_328_VS2010WpfProjectSupportTest/pom.xml
@@ -60,6 +60,9 @@
             </goals>
           </execution>
         </executions>
+        <configuration>
+          <platform>x86</platform>
+        </configuration>
       </plugin>
       <plugin>
         <groupId>org.apache.npanday.plugins</groupId>
