use actual snapshot repository
git-svn-id: https://svn.apache.org/repos/asf/incubator/npanday/npanday-its/trunk@1572531 13f79535-47bb-0310-9956-ffa450edef68

--- a/src/test/resources/BootstrapTest/pom.xml
+++ b/src/test/resources/BootstrapTest/pom.xml
@@ -177,12 +177,11 @@
       </properties>
     </profile>
   </profiles>
-  <!-- Required to build where it was built in a different local repository, but
-       still assumes you're going to use a repository manager to mirror it -->
+  <!-- Required to build where it was built in a different local repository -->
   <repositories>
     <repository>
       <id>npanday.snapshots</id>
-      <url>http://repo1.maven.org/maven2</url>
+      <url>https://archiva-repository.apache.org/archiva/repository/snapshots</url>
       <snapshots>
         <enabled>true</enabled>
       </snapshots>
@@ -191,7 +190,7 @@
   <pluginRepositories>
     <pluginRepository>
       <id>npanday.snapshots</id>
-      <url>http://repo1.maven.org/maven2</url>
+      <url>https://archiva-repository.apache.org/archiva/repository/snapshots</url>
       <snapshots>
         <enabled>true</enabled>
       </snapshots>
