use contentPath instead
See main repository commit for explanation

git-svn-id: https://svn.apache.org/repos/asf/incubator/npanday/npanday-its/trunk@1573505 13f79535-47bb-0310-9956-ffa450edef68

--- a/src/test/resources/NPANDAY_480_AzureSupportOneWebRole/HelloWorld_WebRole/pom.xml
+++ b/src/test/resources/NPANDAY_480_AzureSupportOneWebRole/HelloWorld_WebRole/pom.xml
@@ -66,7 +66,7 @@
         <executions>
           <execution>
             <goals>
-              <goal>create-iisApp-package</goal>
+              <goal>create-content-package</goal>
             </goals>
           </execution>
         </executions>
